# flatris

./: .dir-locals.el  .ghci  .gitignore  Build.hs  ChangeLog.md  README.md  all.min.js  build  dev-server  diagrams-reflex.nix  flatris.cabal  flatris.nix  reflex-dom-contrib.nix  shell.nix  tools.nix
app-reflex/: BoardDiagram.hs  BoardWidget.hs  BoardWidgetSvg.hs  DevMain.hs  Main.hs  MainWidget.hs  Network.hs
css/: flatris.css
src/: Board.hs  BoardDiagram.hs  BoardUtil.hs  Display.hs  Game.hs  Tango.hs
static/: index-min.html
static/css/: flatris.css
test/: Tests.hs
