name:                flatris
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Rodney Lorrimar
maintainer:          dev@rodney.id.au
-- copyright:           
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

flag reflex
  description: Build the reflex app
  default: True

library
  hs-source-dirs:      src
  exposed-modules:     Board
                     , BoardUtil
                     , BoardDiagram
                     , Game
  build-depends:       array
                     , base >=4.9 && <4.10
                     , diagrams-lib
                     , diagrams-svg
                     , extra
                     , lens
                     , mtl
                     , random
                     , text
                     , transformers
                     , time
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TemplateHaskell
                     , DeriveGeneric
                     , RecursiveDo
                     , ScopedTypeVariables
  ghc-options:       -Wall
  if impl(ghcjs)
    ghc-options:       -Wall -dedupe
    cpp-options:       -DGHCJS_BROWSER

executable flatris-reflex
  if flag(reflex)
    buildable: True
  else
    buildable: False

  hs-source-dirs:      app-reflex
  main-is:             Main.hs
  other-modules:       Network
                     , BoardWidget
                     , MainWidget
  build-depends:       array
                     , base
                     , containers
                     , diagrams-lib
                     , diagrams-reflex
                     , extra
                     , file-embed
                     , flatris
                     , ghcjs-dom
                     , lens
                     , mtl
                     , random
                     , reflex
                     , reflex-dom
                     , reflex-dom-contrib
                     , text
                     , time
                     , transformers
  default-extensions:  OverloadedStrings
                     , TemplateHaskell
                     , RecursiveDo
                     , ScopedTypeVariables
  default-language:    Haskell2010
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  if impl(ghcjs)
    ghc-options:       -dedupe
    cpp-options:       -DGHCJS_BROWSER

test-suite flatris-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       HUnit
                     , QuickCheck
                     , array
                     , base
                     , bytestring
                     , extra
                     , flatris
                     , lens
                     , quickcheck-instances
                     , random
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
